Set format for images

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -40,6 +40,7 @@ const golden_dino = true;
                     height="60"
                     aspectRatio={sponsor.ratio}
                     class="rounded"
+                    format="png"
                   />
                 </a>
               </div>
