--- a/src/components/home/GiveBig.astro
+++ b/src/components/home/GiveBig.astro
@@ -9,6 +9,7 @@ import { Image } from '@astrojs/image/components';
     width="300"
     aspectRatio="1:1"
     class="h-auto w-auto mx-auto"
+    format="png"
   />
 </div>
 <div class="z-10">
