--- a/src/components/old/2021Summary.astro
+++ b/src/components/old/2021Summary.astro
@@ -9,6 +9,7 @@ import { Image } from '@astrojs/image/components';
     width="273"
     height="182"
     class="w-1/3 md:w-full mb-0 mr-2 md:mb-2 md:mr-0"
+    format="jpeg"
   />
   <Image
     src="https://ik.imagekit.io/thegoldendino/hfw/carousel/2021/honkfestwest_2021_th-72_ptDY6mK_M.jpg?updatedAt=1636925469114"
@@ -16,6 +17,7 @@ import { Image } from '@astrojs/image/components';
     width="273"
     height="182"
     class="w-1/3 md:w-full h-auto mb-0 mr-2 md:mb-2 md:mr-0"
+    format="jpeg"
   />
   <Image
     src="https://ik.imagekit.io/thegoldendino/hfw/carousel/2021/honkfestwest_2021_th-15_fgEAIXS2pi.jpg?updatedAt=1636925468773"
@@ -23,6 +25,7 @@ import { Image } from '@astrojs/image/components';
     width="273"
     height="182"
     class="w-1/3 md:w-full h-auto"
+    format="jpeg"
   />
 </div>
 <div>
