--- a/src/components/old/VolunteerCoordinatorNeeded.astro
+++ b/src/components/old/VolunteerCoordinatorNeeded.astro
@@ -10,6 +10,7 @@ import Title from '@components/Title.astro';
     width="640"
     height="349"
     class="h-auto max-h-60 w-auto mx-auto"
+    format="jpeg"
   />
 </div>
 <div class="z-10">
