--- a/src/components/post-blurb/TwoColTemplate.astro
+++ b/src/components/post-blurb/TwoColTemplate.astro
@@ -17,6 +17,7 @@ const { post } = Astro.props;
         alt={`${post.title} ${post.subtitle}`}
         height="245"
         aspectRatio={post.image_ratio}
+        format={post.image_format}
       />
     </a>
     <div
