--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -70,6 +70,7 @@ import committee from '@data/committee.json';
             alt="Henry Art for H!FW"
             width="233"
             height="300"
+            format="png"
           />
         </div>
         <p class="content">
@@ -181,6 +182,7 @@ import committee from '@data/committee.json';
                 alt={member.name}
                 width="150"
                 height="150"
+                format="jpeg"
               />
               <p class="content text-center ">
                 <span class="text-main-color-900 text-xl font-bold">
