--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -76,6 +76,7 @@ const postColumns = (index) => {
         class="scale-[1.1] lg:absolute lg:-bottom-10"
         width="600"
         height="615"
+        format="png"
       />
     </section>
 
