--- a/src/pages/supporters.astro
+++ b/src/pages/supporters.astro
@@ -83,6 +83,7 @@ import type { neutral } from 'tailwindcss/colors';
                 alt={sponsors.nea.name}
                 aspectRatio={sponsors.nea.ratio}
                 width="347"
+                format="png"
               />
             </a>
             <a class="block mb-3 sm:mb-0" href={sponsors.artswa.link}>
@@ -92,6 +93,7 @@ import type { neutral } from 'tailwindcss/colors';
                 alt={sponsors.artswa.name}
                 aspectRatio={sponsors.artswa.ratio}
                 width="347"
+                format="png"
               />
             </a>
           </span>
@@ -117,6 +119,7 @@ import type { neutral } from 'tailwindcss/colors';
                     alt={sponsor.name}
                     aspectRatio={sponsor.ratio}
                     width="188"
+                    format="png"
                   />
                 </a>
               ))
@@ -145,6 +148,7 @@ import type { neutral } from 'tailwindcss/colors';
                       alt={sponsor.name}
                       aspectRatio={sponsor.ratio}
                       width="188"
+                      format="png"
                     />
                   </a>
                 </div>
