--- a/src/components/home/BonfireMerch.astro
+++ b/src/components/home/BonfireMerch.astro
@@ -12,6 +12,7 @@ import Title from '@components/Title.astro';
     aspectRatio="1:1"
     width="175"
     class="h-auto mx-auto"
+    format="jpeg"
   />
   <Image
     src="https://ik.imagekit.io/thegoldendino/hfw/2022/bonfire-merch/hoodie_SeVGLGU0P.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1650777265358"
@@ -19,6 +20,7 @@ import Title from '@components/Title.astro';
     aspectRatio="1:1"
     width="175"
     class="h-auto mx-auto"
+    format="jpeg"
   />
   <Image
     src="https://ik.imagekit.io/thegoldendino/hfw/2022/bonfire-merch/sweatshirt_wQDzFBnhe.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1650777265376"
@@ -26,6 +28,7 @@ import Title from '@components/Title.astro';
     aspectRatio="1:1"
     width="175"
     class="h-auto mx-auto"
+    format="jpeg"
   />
   <Image
     src="https://ik.imagekit.io/thegoldendino/hfw/2022/bonfire-merch/unisex-tank_6K0RGsM-c.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1650777265418"
@@ -33,6 +36,7 @@ import Title from '@components/Title.astro';
     aspectRatio="1:1"
     width="175"
     class="h-auto mx-auto"
+    format="jpeg"
   />
 </div>
 <div class="z-10">
