--- a/src/components/home/HonkanoThursday.astro
+++ b/src/components/home/HonkanoThursday.astro
@@ -10,6 +10,7 @@ import Title from '@components/Title.astro';
     width="260"
     height="402"
     class="h-auto mx-auto"
+    format="png"
   />
 </div>
 <div class="z-10">
