--- a/src/components/post-blurb/ThreeColTemplate.astro
+++ b/src/components/post-blurb/ThreeColTemplate.astro
@@ -19,6 +19,7 @@ const { post } = Astro.props;
         alt={`${post.title} ${post.subtitle}`}
         height="245"
         aspectRatio={post.image_ratio}
+        format={post.image_format}
       />
     </a>
     <div
