Portal | Add link to hours form

--- a/src/pages/portal.astro
+++ b/src/pages/portal.astro
@@ -40,7 +40,7 @@ import '@styles/global.css';
                 </div>
               </div>
             </section>
-            <section>
+            <!-- <section>
               <div class="rounded-lg bg-white overflow-hidden shadow">
                 <div class="p-6 lg:px-0 lg:py-6">
                   <iframe
@@ -64,10 +64,16 @@ import '@styles/global.css';
                   >
                 </div>
               </div>
-            </section>
+            </section> -->
             <section>
               <div class="rounded-lg bg-white overflow-hidden shadow">
                 <div class="p-6 lg:px-0 lg:py-6">
+                  <a
+                    class="block pl-6 font-semibold text-blue-500 hover:text-blue-600"
+                    href="https://docs.google.com/forms/d/e/1FAIpQLScNKpVnx8nGBraZ0cIVCYNhr0fab5H5Ux9le811WjdlZ2q1rg/viewform"
+                  >
+                    &gt; Goto Form</a
+                  >
                   <iframe
                     class="hidden md:block"
                     src="https://docs.google.com/forms/d/e/1FAIpQLScNKpVnx8nGBraZ0cIVCYNhr0fab5H5Ux9le811WjdlZ2q1rg/viewform?embedded=true"
