Portal | Refresh countdown clock

--- a/src/pages/portal.astro
+++ b/src/pages/portal.astro
@@ -69,7 +69,7 @@ import '@styles/global.css';
               <div class="rounded-lg bg-white overflow-hidden shadow">
                 <div class="p-6 lg:px-0 lg:py-6">
                   <a
-                    class="block pl-6 font-semibold text-blue-500 hover:text-blue-600"
+                    class="pl-6 hidden lg:block font-semibold text-blue-500 hover:text-blue-600"
                     href="https://docs.google.com/forms/d/e/1FAIpQLScNKpVnx8nGBraZ0cIVCYNhr0fab5H5Ux9le811WjdlZ2q1rg/viewform"
                   >
                     &gt; Goto Form</a
@@ -78,7 +78,7 @@ import '@styles/global.css';
                     class="hidden md:block"
                     src="https://docs.google.com/forms/d/e/1FAIpQLScNKpVnx8nGBraZ0cIVCYNhr0fab5H5Ux9le811WjdlZ2q1rg/viewform?embedded=true"
                     width="640"
-                    height="700"
+                    height="900"
                     frameborder="0"
                     marginheight="0"
                     marginwidth="0">Loading…</iframe
