Home | Take off Merch shop from front page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -85,12 +85,11 @@ const postColumns = (index) => {
       <NewsletterForm />
     </section>
 
-    <article
+    <!-- <article
       class="w-full content-container col-span-6 flex flex-col md:flex-row"
     >
       <BackToTop />
-      <BonfireMerch />
-    </article>
+    </article> -->
 
     <!-- POST BLURBS -->
     {
