Update 'Our Story'

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -86,7 +86,8 @@ import committee from '@data/committee.json';
           In 2021 HONK! Fest West transitioned to a federally recognized
           501(c)(3) non-profit known as HONK Festival West. We are excited to
           usher in a new era of programming for our community, while continuing
-          our iconic annual HONK! Fest West in June.
+          our iconic annual HONK! Fest West in June, including the return of the
+          HONK! All-Stars Band, monthly HONK! Jams, and HONK! Junior.
 
           <br /><br />
 
@@ -114,15 +115,18 @@ import committee from '@data/committee.json';
           We have called Georgetown our home since the festival’s inception, and
           have also celebrated in Columbia City, White Center, South Park, The
           Waterfront, Fremont/Gas Works Park, Capitol Hill, Central District,
-          Pioneer Square, Downtown, Seattle Center, and West Seattle. We will
-          host our first Yesler Terrace neighborhood festival in 2022.
+          Pioneer Square, Downtown, Seattle Center, and West Seattle. In 2022 we
+          celebrated for the first time with the Yesler Terrace community and
+          are looking forward to returning there in 2023.
 
           <br /><br />
 
-          <b
-            >Join us! June 3: Georgetown (6p – 10p), June 4: Columbia City (12p
-            – 7p), and June 5: Yesler Terrace (12p – 6p).</b
-          > We can’t wait to kick off Summer in Seattle with you in 2022.
+          <b>
+            Join us! June 2: Georgetown, June 3: Columbia City, and June 5:
+            Yesler Terrace Park.
+          </b>
+
+          We can’t wait to kick off Summer in Seattle with you in 2023.
         </p>
       </div>
     </section>
@@ -177,7 +181,7 @@ import committee from '@data/committee.json';
           committee.photos.map((member) => (
             <div class="flex flex-col items-center">
               <Image
-                class="rounded-full h-32 w-auto   mb-2 border-[.5rem] border-main-color-900"
+                class="rounded-full h-32 w-auto mb-2 border-[.5rem] border-main-color-900"
                 src={member.image_url}
                 alt={member.name}
                 width="150"
