About | Update 'Join Us' Section

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -157,10 +157,11 @@ import committee from '@data/committee.json';
         We are a completely volunteer-run organization and festival and are
         currently recruiting to fill some key roles on our various Committees.
         We have roles both big and small on our <b>Event Production Committee</b
-        >, our <b>Marketing, Outreach and Communication Committee</b>, and our <b
-          >Fundraising Committee</b
-        >. If you are interested, head over to our Volunteers page to see some
-        specific roles or just send an email to
+        >, our <b>Outreach Committee</b>, our <b
+          >Creative Communications Committee</b
+        >, and our <b>Fundraising Committee</b>. If you are interested, head
+        over to our Volunteers page to see some specific roles or just send an
+        email to
         <a href="mailto:volunteer@honkfestwest.org"
           >volunteer@honkfestwest.org</a
         > for more information on how you can get involved.
