Redesign Website with 2023 theme

--- a/src/components/FestivalVolunteer.astro
+++ b/src/components/FestivalVolunteer.astro
@@ -1,16 +1,17 @@
 ---
-	import Title from './Title.astro';
+import Title from './Title.astro';
 ---
 
 <div class="content-container">
-	<Title title="Festival Volunteer" center={true} />
-	<p class="content">
-		We need all the help we can get. Please sign up below and join an amazing group of people that help run HONK! Fest West every year.
-	</p>
-	<a 
-		href="https://volunteer-hfw.netlify.app"
-		class="block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-accent-color w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90">
-		» SIGN UP HERE
-	</a>
+  <Title title="Festival Volunteer" center={true} />
+  <p class="content">
+    We need all the help we can get. Please sign up below and join an amazing
+    group of people that help run HONK! Fest West every year.
+  </p>
+  <a
+    href="https://volunteer-hfw.netlify.app"
+    class="text-shadow block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-navy w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
+  >
+    » SIGN UP HERE
+  </a>
 </div>
-
