--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,8 +3,14 @@ import { Image } from '@astrojs/image/components';
 import SocialLinks from '@components/SocialLinks.astro';
 import navigation from '@data/navigation.json';
 
-const activeLink = (link: string) => {
-  return Astro.url.pathname.includes(link) ? ' bg-[#962C2B]' : 'bg-[#0A4D4B] ';
+const activeListItem = (link: string) => {
+  return Astro.url.pathname.includes(link)
+    ? 'bg-pink ring-4 ring-cobalt text-cobalt cursor-default'
+    : 'bg-cobalt text-pink hover:scale-105';
+};
+
+const activeAnchor = (link: string) => {
+  return Astro.url.pathname.includes(link) ? '' : '';
 };
 ---
 
@@ -12,24 +18,17 @@ const activeLink = (link: string) => {
 
 <!-- H!FW LOGO -->
 
-<a class="block" href="/"> </a><div
-  class="flex justify-center w-full bg-[#962C2B] shadow-lg relative z-10 border-y-[.7rem] border-opacity-80 border-[#0E4341] mt-6 sm:mt-12 mb-4 sm:mb-8 transition ease-in hover:bg-main-color-900"
+<div
+  class="flex justify-center w-full relative z-10 mt-6 sm:mt-12 mb-4 sm:mb-8"
 >
-  <a class="block" href="/">
-    <div
-      class="l-jagged-bg bg-[length:100px_25px] sm:bg-[length:300px_50px] opacity-90"
-    >
-    </div>
-    <div class="r-jagged-bg bg-[length:100px_25px] sm:bg-[length:300px_50px]">
-    </div>
-  </a><a class="block mx-auto sm:w-2/3 lg:w-2/5 max-h-full z-0 peer" href="/">
+  <a class="block mx-auto sm:w-2/3 lg:w-2/5 max-h-full z-0 peer" href="/">
     <Image
-      src="https://ik.imagekit.io/thegoldendino/hfw/logo-transparent_wyLhQJMof.png?ik-sdk-version=javascript-1.4.3&updatedAt=1648438185463"
+      src="https://ik.imagekit.io/thegoldendino/hfw/2023/logo-2023_zZNEDpiqu.png?ik-sdk-version=javascript-1.4.3&updatedAt=1668291679349"
       alt="HONK! Fest West"
       format="png"
       width="557"
-      height="306"
-      class="w-auto h-full mx-auto"
+      aspectRatio="427:199"
+      class="w-auto h-full mx-auto hover:transition ease-in hover:scale-105"
     />
   </a>
 </div>
@@ -40,11 +39,16 @@ const activeLink = (link: string) => {
     {
       navigation.main.map((item) => (
         <li
-          class={`text-2xl sm:text-3xl font-title flex items-center my-2 bg-opacity-100 text-title-primary-color focus:shadow-none transition ease-in hover:bg-opacity-90 pt-2 pb-1 px-2 mx-4 rounded-full shadow-lg z-10  ${activeLink(
+          class={`text-2xl sm:text-3xl font-title flex items-center my-2 bg-opacity-100 ease-in pt-2 pb-1 px-2 mx-4 rounded-full shadow-lg z-10  ${activeListItem(
             item.link
           )}`}
         >
-          <a class={` mx-4 sm:mx-2 block  font-semibold`} href={item.link}>
+          <a
+            class={` mx-4 sm:mx-2 block  font-semibold ease-in ${activeAnchor(
+              item.link
+            )}`}
+            href={item.link}
+          >
             {item.name}
           </a>
         </li>
@@ -52,11 +56,11 @@ const activeLink = (link: string) => {
     }
 
     <!-- SOCIAL NAV -->
-    <li class="text-2xl text-[#0E4341] opacity-90 ml-2 my-2 flex z-10">
+    <li class="text-2xl text-cobalt opacity-90 ml-2 my-2 flex z-10">
       {
         Object.keys(navigation.social).map((item) => (
           <div>
-            <div class="hidden sm:block px-1 h-9">
+            <div class="hidden sm:block px-1 h-9 hover:transition ease-in hover:scale-105">
               <SocialLinks link={item} size="1.875rem" />
             </div>
             <div class="block sm:hidden px-1 h-7">
