--- a/src/pages/festival/index.astro
+++ b/src/pages/festival/index.astro
@@ -13,7 +13,7 @@ const playingBands = Object.values(bands)
 
 <BaseLayout title="Schedule">
   <div
-    class="flex justify-center items-center w-full py-28 text-7xl font-bold text-accent-color"
+    class="text-shadow flex justify-center items-center w-full py-28 text-7xl font-bold text-pink"
   >
     Coming Soon
   </div>
