--- a/src/pages/supporters.astro
+++ b/src/pages/supporters.astro
@@ -53,11 +53,9 @@ import type { neutral } from 'tailwindcss/colors';
           <br />
           <a
             href="https://connect.clickandpledge.com/w/Form/a6086a7f-ef18-4eb8-a2bc-ffa205759fcc"
-            class="block transition ease-in-out hover:bg-main-color-300 hover:bg-opacity-20 py-1 px-4 mt-2 text-center rounded-full border-4 border-main-color-300 border-opacity-80 hover:border-opacity-100 w-auto"
+            class="block transition ease-in-out bg-navy hover:scale-105 py-1 px-4 mt-2 text-center rounded-full w-auto"
           >
-            <span class="block text-lg content hover:text-white"
-              >Click & Pledge</span
-            >
+            <span class="block text-lg content text-white">Click & Pledge</span>
           </a>
         </p>
       </section>
@@ -98,7 +96,7 @@ import type { neutral } from 'tailwindcss/colors';
             </a>
           </span>
           <span
-            class="border-b-4 border-opacity-60 border-title-primary-color border-dotted w-full block mb-4"
+            class="border-b-4 border-opacity-60 border-pink border-dotted w-full block mb-4"
           ></span>
 
           <span>
@@ -127,7 +125,7 @@ import type { neutral } from 'tailwindcss/colors';
           </span>
 
           <span
-            class="border-b-4 border-opacity-60 border-title-primary-color border-dotted w-full block mb-4"
+            class="border-b-4 border-opacity-60 border-pink border-dotted w-full block mb-4"
           ></span>
 
           <span>
@@ -158,7 +156,7 @@ import type { neutral } from 'tailwindcss/colors';
         </div>
 
         <span
-          class="border-b-4 border-opacity-60 border-title-primary-color border-dotted w-full block mb-4"
+          class="border-b-4 border-opacity-60 border-pink border-dotted w-full block mb-4"
         ></span>
 
         <p>
