--- a/src/pages/volunteer/index.astro
+++ b/src/pages/volunteer/index.astro
@@ -20,7 +20,7 @@ const positions = volunteer_data.positions;
         </p>
         <a
           href="/volunteer/housing-form"
-          class="block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-accent-color w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
+          class="text-shadow block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-navy w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
         >
           » SIGN UP HERE
         </a>
@@ -45,7 +45,7 @@ const positions = volunteer_data.positions;
             <p>{positions[position].description}</p>
             <a
               href={`/volunteer/committee-form?position=${position}`}
-              class="block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-accent-color w-fit text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
+              class="text-shadow block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-navy w-fit text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
             >
               » APPLY
             </a>
