--- a/src/components/BackToTop.astro
+++ b/src/components/BackToTop.astro
@@ -1,1 +1,5 @@
-<a href="#back-to-top" class="z-30 absolute top-4 right-5 text-main-color-600 font-semibold opacity-50 hover:opacity-100 flex items-center text-sm transition ease-in"><span>&#9650;</span>&nbsp;<span>top</span></a>
+<a
+  href="#back-to-top"
+  class="text-shadow z-30 absolute top-4 right-5 text-pink font-semibold opacity-70 hover:opacity-100 flex items-center text-sm transition ease-in"
+  ><span>&#9650;</span>&nbsp;<span>top</span>
+</a>
