--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,9 +10,9 @@ const displaySponsors = [sponsors.nea, sponsors.artswa, ...sponsors.arts];
 const golden_dino = true;
 ---
 
-<div class="bg-[#962C2B]">
+<div class="bg-cobalt">
   <!-- SPONSORS -->
-  <div class="border-b-[1rem] border-[#0E4341] border-opacity-80">
+  <div class="border-b-[1rem] border-navy border-opacity-80">
     <div
       class="max-w-screen-xl w-full mx-auto pt-3 px-3 sm:py-4 sm:px-6 flex flex-wrap sm:flex-nowrap"
     >
@@ -22,7 +22,7 @@ const golden_dino = true;
           class="flex flex-wrap justify-around align-center sm:w-3/4 items-center pt-3"
         >
           <span
-            class="text-xs leading-tight w-1/5 text-main-color-300 mr-6 text-justify text-opacity-80 pr-3"
+            class="text-xs leading-tight w-1/5 text-gray-200 mr-6 text-justify text-opacity-80 pr-3"
           >
             This project is supported in part by the National Endowment for the
             Arts and the WA State Arts Commission.
@@ -53,29 +53,31 @@ const golden_dino = true;
 </div>
 
 <!-- BOTTOM -->
-<div
-  class="max-w-screen-xl w-full mx-auto p-1 sm:p-0 flex flex-wrap sm:flex-nowrap items-center"
->
-  <a
-    class="w-full text-center text-main-color-900 text-lg font-bold font-base block w-full sm:w-1/3 m-1 sm:m-4"
-    href="/">© 2022 HONK! Fest West</a
+<div class="bg-navy">
+  <div
+    class="max-w-screen-xl w-full mx-auto p-1 sm:p-0 flex flex-wrap sm:flex-nowrap items-center"
   >
-  <ul
-    class="items-center h-full flex-1 w-full sm:w-1/3 m-1 sm:m-4 hidden sm:flex justify-around"
-  >
-    {
-      Object.keys(navigation.social).map((item) => (
-        <li class="text-main-color-900">
-          <SocialLinks link={item} size="1.25rem" />
-        </li>
-      ))
-    }
-  </ul>
-  <GoldenDino client:visible />
-  <a
-    class="w-full text-center font-base link text-accent-color font-bold text-lg block sm:w-1/3 m-1 sm:m-4 underline"
-    href="#"
-  >
-    Back to top
-  </a>
+    <a
+      class="w-full text-center text-cobalt text-lg font-bold font-base block w-full sm:w-1/3 m-1 sm:m-4"
+      href="/">© 2022 HONK! Fest West</a
+    >
+    <ul
+      class="items-center h-full flex-1 w-full sm:w-1/3 m-1 sm:m-4 hidden sm:flex justify-around"
+    >
+      {
+        Object.keys(navigation.social).map((item) => (
+          <li class="text-cobalt">
+            <SocialLinks link={item} size="1.25rem" />
+          </li>
+        ))
+      }
+    </ul>
+    <GoldenDino client:visible />
+    <a
+      class="text-shadow w-full text-center font-base link text-pink font-bold text-lg block sm:w-1/3 m-1 sm:m-4 underline hover:scale-105"
+      href="#"
+    >
+      Back to top
+    </a>
+  </div>
 </div>
