--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,17 +1,17 @@
 ---
-import Head from '@components/base-head/BaseHead.astro'
-import Header from '@components/Header.astro'
-import Footer from '@components/Footer.astro'
+import Head from '@components/base-head/BaseHead.astro';
+import Header from '@components/Header.astro';
+import Footer from '@components/Footer.astro';
+import BackgroundImage from '@components/BackgroundImage.astro';
 
 const { title } = Astro.props;
 ---
 
 <!DOCTYPE html>
 <html lang="en">
-
   <!-- HEAD -->
   <head>
-    <Head title={title}>   
+    <Head title={title}>
       <slot name="head" />
     </Head>
   </head>
@@ -21,18 +21,21 @@ const { title } = Astro.props;
 
     <!-- BACKGROUND IMAGE -->
     <div class="w-full h-full fixed top-0 left-0">
-	    <div class="bg-[#D2AC54] w-full h-full fixed top-0 left-0"></div>
-      <div class="bg-site  w-full h-full fixed top-0 left-0"></div>
+      <div class="bg-aqua w-full h-full fixed top-0 left-0"></div>
+      <BackgroundImage />
+      <!-- <div class="bg-site  w-full h-full fixed top-0 left-0"></div> -->
     </div>
 
-    <div class="w-full h-full absolute top-0 left-0 flex flex-col justify-between">
+    <div
+      class="w-full h-full absolute top-0 left-0 flex flex-col justify-between"
+    >
       <!-- HEADER -->
-      <header class=" w-full mx-auto">
+      <header class="w-full mx-auto">
         <Header />
       </header>
 
       <!-- MAIN -->
-      <main class=" max-w-screen-xl pb-6 sm:pb-10 px-3 sm:px-6 w-full mx-auto">
+      <main class="max-w-screen-xl pb-6 sm:pb-10 px-3 sm:px-6 w-full mx-auto">
         <slot />
       </main>
 
@@ -42,5 +45,4 @@ const { title } = Astro.props;
       </footer>
     </div>
   </body>
-
 </html>
