--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,7 +19,7 @@ const activeAnchor = (link: string) => {
 <!-- H!FW LOGO -->
 
 <div
-  class="flex justify-center w-full relative z-10 mt-6 sm:mt-12 mb-4 sm:mb-8"
+  class="min-h-[153px] sm:min-h-[273px] flex justify-center w-full relative z-10 mt-6 sm:mt-12 mb-4 sm:mb-8"
 >
   <a class="block mx-auto sm:w-2/3 lg:w-2/5 max-h-full z-0 peer" href="/">
     <Image
