Header | Fix squish on resize

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -315,10 +315,10 @@ import committee from '@data/committee.json';
 
 <style>
   a.button {
-    @apply block bg-navy rounded text-xl text-pink mb-5 last:mb-0 font-base font-bold py-2 px-4 cursor-pointer;
+    @apply block bg-navy rounded text-xl text-gray-200 mb-5 last:mb-0 font-base font-bold py-2 px-4 cursor-pointer;
   }
 
   a.button:hover {
-    @apply scale-105 text-gray-200;
+    @apply scale-105 text-pink;
   }
 </style>
