--- a/src/pages/portal.astro
+++ b/src/pages/portal.astro
@@ -1,6 +1,6 @@
 ---
 import FestivalCountDown from '../components/FestivalCountDown.svelte';
-import '@styles/global.css';
+import '@styles/portal.css';
 ---
 
 <!DOCTYPE html>
