--- a/src/styles/site.css
+++ b/src/styles/site.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Alatsi&family=Poppins:wght@400;600&display=swap');
+@config "./tailwind.site.config.cjs";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
