--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@ import navigation from '@data/navigation.json';
 const activeListItem = (link: string) => {
   return Astro.url.pathname.includes(link)
     ? 'bg-pink ring-4 ring-cobalt text-cobalt cursor-default'
-    : 'bg-cobalt text-pink hover:scale-105';
+    : 'text-shadow bg-navy text-gray-300 hover:scale-105 hover:bg-pink';
 };
 
 const activeAnchor = (link: string) => {
@@ -39,7 +39,7 @@ const activeAnchor = (link: string) => {
     {
       navigation.main.map((item) => (
         <li
-          class={`text-2xl sm:text-3xl font-title flex items-center my-2 bg-opacity-100 ease-in pt-2 pb-1 px-2 mx-4 rounded-full shadow-lg z-10  ${activeListItem(
+          class={`hover:transition ease-in-out text-2xl sm:text-3xl font-title flex items-center my-2 bg-opacity-100 ease-in pt-2 pb-1 px-2 mx-4 rounded-full shadow-lg z-10 ring-4 ring-cobalt ${activeListItem(
             item.link
           )}`}
         >
@@ -62,7 +62,7 @@ const activeAnchor = (link: string) => {
       {
         Object.keys(navigation.social).map((item) => (
           <div>
-            <div class="hidden sm:block px-1 h-9 hover:transition ease-in hover:scale-105">
+            <div class="hidden sm:block px-1 h-9 hover:transition ease-in hover:scale-105 hover:text-pink">
               <SocialLinks link={item} size="1.875rem" />
             </div>
             <div class="block sm:hidden px-1 h-7">
