Fonts | Update font shade

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -319,6 +319,6 @@ import committee from '@data/committee.json';
   }
 
   a.button:hover {
-    @apply scale-105 text-pink;
+    @apply scale-105 bg-pink transition ease-in-out;
   }
 </style>
