--- a/src/pages/volunteer/committee-form-success.astro
+++ b/src/pages/volunteer/committee-form-success.astro
@@ -3,8 +3,10 @@ import BaseLayout from '@layouts/BaseLayout.astro';
 ---
 
 <BaseLayout title="Volunteer Committee Form">
-	<div class="content-container">
-		<h2 class="text-4xl text-center text-gray-100">Thank You!</h2>
-		<p class="text-center text-xl mt-4">Your application has been submitted. We will be in touch with you soon.</p>	
-	</div>
+  <div class="content-container">
+    <h2 class="text-4xl text-center text-gray-200">Thank You!</h2>
+    <p class="text-center text-xl mt-4">
+      Your application has been submitted. We will be in touch with you soon.
+    </p>
+  </div>
 </BaseLayout>
