Title | Lighten Title color

--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -17,7 +17,7 @@ const _id = id.length ? id : title;
   }`}
 >
   <span
-    class={`text-pink  ${center && subtitle ? 'ml-3' : ''} ${
+    class={`text-pink-lt  ${center && subtitle ? 'ml-3' : ''} ${
       subtitle ? 'mr-3' : ''
     } block ${center ? 'text-center' : ''}`}
   >
