--- a/src/styles/site.css
+++ b/src/styles/site.css
@@ -7,6 +7,7 @@
 :root {
   --colors-aqua: #00bfc9;
   --colors-pink: #ff7eba;
+  --colors-pink-lt: #ff94c6;
   --colors-navy: #0078cd;
   --colors-cobalt: #1c4dab;
 }
